<resources>
    <string name="app_name">ImplicitAppKotlin</string>
    <string name="title_activity_utama">UtamaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_audioM">Audio Manager</string>
    <string name="menu_video">Video</string>
    <string name="menu_tts">Tts</string>
    <string name="menu_audioR">Audio Recorder</string>
    <string name="menu_email">Email</string>
    <string name="menu_wifi">Wifi</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_whatsapp">WhatsApp</string>
    <string name="menu_phone">Phone</string>
    <string name="phone_number">nohp</string>
    <string name="inputkan_number">input no hp</string>
</resources>
